# which-key.wayland

./: .gitignore  .justfile  .rumdl.toml  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
docs/: README_zh.md
examples/: config.kdl
nix/: package.nix
src/: config.rs  keybind.rs  lib.rs  main.rs
src/config/: bind.rs  parser.rs
src/keybind/: actions.rs  page.rs
src/layer/: client.rs  color.rs  render.rs  text.rs
src/layer/client/: compositor.rs  keyboard.rs  layer_shell.rs  output.rs  seat.rs  shm.rs
which-key-wayland/: Cargo.toml
which-key-wayland-macros/: Cargo.toml
which-key-wayland-macros/src/: lib.rs
which-key-wayland/src/: cli.rs  config.rs  ipc.rs  keybind.rs  layer.rs  lib.rs  main.rs
which-key-wayland/src/config/: bind.rs  define.rs  parser.rs  reloader.rs
which-key-wayland/src/keybind/: actions.rs  key.rs  page.rs
which-key-wayland/src/layer/: client.rs  color.rs  render.rs  text.rs  unit.rs
which-key-wayland/src/layer/client/: compositor.rs  keyboard.rs  layer_shell.rs  output.rs  registry.rs  seat.rs  shm.rs
