[package]
name = "which-key-wayland"
version = "0.2.1"
edition = "2024"
description = "A key-hint panel for Wayland, inspired by the Neovim plugin which-key.nvim and the Helix editor style."
keywords = ["which-key", "wayland"]
repository = "https://github.com/liuhq/which-key.wayland"
readme = "../README.md"
license = "MIT"

[dependencies]
which-key-wayland-macros = "0.1.0"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cosmic-text = "0.19.0"
env_logger = "0.11.10"
kdl = "6.5.0"
log = "0.4.29"
rustix = { version = "1", features = ["event", "fs"] }
smithay-client-toolkit = "0.20.0"
xkbcommon = "0.8"
tiny-skia = "0.12.0"
zbus = { version = "5", features = ["blocking"] }
